--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" /> 
-    <title>Link CSS to HTML</title>
+    <title>Michał Śmiałek - professional and personal pages</title>
 </head>
 
 <img src="/images/smialek.jpg" width=10%> Michał Śmiałek
