--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -6,6 +7,7 @@
     <title>Michał Śmiałek - professional and personal pages</title>
 </head>
 
+<body>
 <img src="/images/smialek.jpg" width=10%> Michał Śmiałek
 
  <ul>
@@ -24,3 +26,5 @@
 
 <p>I am also the author of “Understanding UML. Methods of object modeling” published by Helion (in Polish) and “From Requirements to Java in a Snap” published by Springer. I was the scientific coordinator of the <a href="http://www.redseeds.eu/">ReDSeeDS
 </a> (<a href="http://cordis.europa.eu/search/index.cfm?fuseaction=news.document&amp;N_RCN=31614">press release</a>) project financed from the 6th Framework Program for Scientific Research of the European Union.</p>
+</body>
+</html>
