--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>In previous years, in parallel to research work I was engaged in professional   development of software systems as programmer, analyst, designer and project manager. I also worked as an expert-consultant and trainer (over 200 courses   for professionals) in <a href="https://pl.wikipedia.org/wiki/Infovide-Matrix">Infovide-Matrix</a>.</p>
 
-<p>I am also the author of “Understanding UML. Methods of object modeling” published by Helion (in Polish) and “From Requirements to Java in a Snap” published by Springer. I was the scientific coordinator of the <a href="http://www.redseeds.eu/">ReDSeeDS
-</a> (<a href="http://cordis.europa.eu/search/index.cfm?fuseaction=news.document&amp;N_RCN=31614">press release</a>) project financed from the 6th Framework Program for Scientific Research of the European Union.</p>
+<p>I am also the author of “Understanding UML. Methods of object modeling” published by Helion (in Polish) and “From Requirements to Java in a Snap” published by Springer. I was the scientific coordinator of the <a href="https://github.com/smialekm/redseeds">ReDSeeDS
+</a> (<a href="https://cordis.europa.eu/project/rcn/79442/factsheet/en">fact sheet</a>) project financed from the 6th Framework Program for Scientific Research of the European Union and the <a href="https://www.balticlsc.eu/">BalticLSC</a> (<a href="https://projects.interreg-baltic.eu/projects/balticlsc-172.html">fact sheet</a>) project financed from the Interreg Baltic Sea Reagion programme.</p>
 </body>
 </html>
