--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-<img src="/images/smialek.jpg" width=150> Michał Śmiałek
+    
+<h1><img src="/images/smialek.jpg" width=150> Michał Śmiałek</h1>
 
- <ul>
+<ul>
   <li><a href="Research.html">Research</a></li>
   <li><a href="publications.html">Publications</a></li>
   <li><a href="teaching.html">Teaching</a></li>
