--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    
-<h1><img src="/images/smialek.jpg" width=150> Michał Śmiałek</h1>
+
+<p>
+  <img src="/images/smialek.jpg" width=150 align="center">
+  <h1>Michał Śmiałek</h1>
+  <h2>Professional and personal pages</h2>
+</p?
 
 <ul>
   <li><a href="Research.html">Research</a></li>
