--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <p>
-  <img src="/images/smialek.jpg" width=150 align="center">
+  <img src="/images/smialek.jpg" width=150 align="center" style="float:left">
   <h1>Michał Śmiałek</h1>
   <h2>Professional and personal pages</h2>
 </p>
