--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
 
-<p>
-  <img src="/images/smialek.jpg" width=150 align="center" style="float:left">
-  <h1>Michał Śmiałek</h1>
-  <h2>Professional and personal pages</h2>
-</p>
+<img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:10px">
+<h1>Michał Śmiałek</h1>
+<h2>Professional and personal pages</h2>
+    
+<div style="clear:left;"></div>
 
 <ul>
   <li><a href="Research.html">Research</a></li>
