--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:10px">
+<img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px">
 <h1>Michał Śmiałek</h1>
 <h2>Professional and personal pages</h2>
     
