--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px">
 <h1>Michał Śmiałek</h1>
-<h2>Professional and personal pages</h2>
+Professional and personal pages
     
 <div style="clear:left;"></div>
 
