--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div style="clear:left;"></div>
 
 <ul>
-  <li><a href="Research.html">Research</a></li>
+  <li><a href="research.html">Research</a></li>
   <li><a href="publications.html">Publications</a></li>
   <li><a href="teaching.html">Teaching</a></li>
   <li><a href="personal.html">Personal</a></li>
