--- a/research.html
+++ b/research.html
@@ -9,16 +9,17 @@
 
 <body>
 
-<h1>Research</h2>
+<h1>Research</h1>
     
-<h2>Research group</h2>
+<p><strong>Research Group<br /></strong></p>
 
 <p>I am the leader of the <a href="http://smog.iem.pw.edu.pl/">Software Modeling Group (SMoG)</a><a href="http://smog.iem.pw.edu.pl/"><img class=" wp-image-90 alignright" src="/images/smog.jpg" alt="" width="165" height="59" style="float:left; margin-right:20px; /></a> affiliated with the <a href="http://www.iem.pw.edu.pl/?page_id=204">Institute of Theory of Electrical Engineering, Measurement and Information Systems</a> at the <a href="https://www.ee.pw.edu.pl/en/">Faculty of Electrical Engineering</a> of the <a href="https://www.pw.edu.pl/engpw">Warsaw University of Technology</a>. The main area of interest of the SMoG group is modeling of software. The group is mostly engaged in research around object-oriented software development methods and their applications. SMoG's area of concern are also CASE tools that try to realize the ideas of MDD (Model-Driven Development) and which enhance the possibility of using UML (Unified Modeling Language) as a universal "lingua franca" of software engineering. SMoG research activities are often related to the field of meta-modeling, such as issues which pertain creation of MOF-based definitions of languages. Other SMoG's research interests include scenario-based requirements engineering, model transformations and software reuse.</p>
 
 <div style="clear:left;"></div>
 
-<p><strong>BalticLSC<a href="https://www.balticlsc.eu/"><img class="wp-image-65 alignright" src="/images/balticlsc.jpg" alt="" width="305" height="128" style="float:left; margin-right:20px;"/></a> (Baltic Large Scale Computing)<br /></strong></p>
-<p>I was the Project Coordinator for the BalticLSC project consortium. WUT (Politechnika Warszawska) was the Lead Partner of the consortium of eight institutions from around the Baltic Sea Region. The project was funded from the Interreg BSR scheme of the European Union (project #075). It has started in September 2018 and have succesfully finished in December 2021. More information can be found on the <a href="https://www.balticlsc.eu/">project's web page</a>, and <a href="https://projects.interreg-baltic.eu/projects/balticlsc-172.html">info page</a>.</p>
+<p><strong>BalticLSC (Baltic Large Scale Computing)<br /></strong></p>
+
+<p><a href="https://www.balticlsc.eu/"><img class="wp-image-65 alignright" src="/images/balticlsc.jpg" alt="" width="305" height="128" style="float:left; margin-right:20px;"/></a>I was the Project Coordinator for the BalticLSC project consortium. WUT (Politechnika Warszawska) was the Lead Partner of the consortium of eight institutions from around the Baltic Sea Region. The project was funded from the Interreg BSR scheme of the European Union (project #075). It has started in September 2018 and have succesfully finished in December 2021. More information can be found on the <a href="https://www.balticlsc.eu/">project's web page</a>, and <a href="https://projects.interreg-baltic.eu/projects/balticlsc-172.html">info page</a>.</p>
 
 <div style="clear:left;"></div>
 
