--- a/research.html
+++ b/research.html
@@ -11,11 +11,13 @@
 
 <h1>Research</h1>
     
-<p><strong>Research Group<br /></strong></p>
+<h2>Research Group</h2>
 
 <p>I am the leader of the <a href="http://smog.iem.pw.edu.pl/">Software Modeling Group (SMoG)</a><a href="http://smog.iem.pw.edu.pl/"><img class=" wp-image-90 alignright" src="/images/smog.jpg" alt="" width="165" height="59" style="float:left; margin-right:20px; /></a> affiliated with the <a href="http://www.iem.pw.edu.pl/?page_id=204">Institute of Theory of Electrical Engineering, Measurement and Information Systems</a> at the <a href="https://www.ee.pw.edu.pl/en/">Faculty of Electrical Engineering</a> of the <a href="https://www.pw.edu.pl/engpw">Warsaw University of Technology</a>. The main area of interest of the SMoG group is modeling of software. The group is mostly engaged in research around object-oriented software development methods and their applications. SMoG's area of concern are also CASE tools that try to realize the ideas of MDD (Model-Driven Development) and which enhance the possibility of using UML (Unified Modeling Language) as a universal "lingua franca" of software engineering. SMoG research activities are often related to the field of meta-modeling, such as issues which pertain creation of MOF-based definitions of languages. Other SMoG's research interests include scenario-based requirements engineering, model transformations and software reuse.</p>
 
 <div style="clear:left;"></div>
+
+<h2>Research Projects</h2>
 
 <p><strong>BalticLSC (Baltic Large Scale Computing)</strong></p>
 
