--- a/research.html
+++ b/research.html
@@ -27,19 +27,19 @@
 
 <p><strong>ReDSeeDS (Requirements Driven Software Development System)</strong></p>
 
-<p><a href="https://github.com/smialekm/redseeds/"><img class="size-full wp-image-73 alignright" src="/images/redseeds.gif" alt="" width="148" height="107" /></a>I was the Scientific Coordinator for the ReDSeeDS project consortium. This involved leadership of the consortium of eleven institutions from around Europe. The project was funded from the 6th Framework Programme for Scientific Research of the EU (contract #033596). It has started in September 2006 and finished successfully in August 2009. More information can be found on the <a href="https://github.com/smialekm/redseeds/">project's web page</a>, and <a href="https://cordis.europa.eu/project/rcn/79442/factsheet/en">info page</a>.</p>
+<p><a href="https://github.com/smialekm/redseeds/"><img class="size-full wp-image-73 alignright" src="/images/redseeds.gif" alt="" width="148" height="107" style="float:left; margin-right:20px;"/></a>I was the Scientific Coordinator for the ReDSeeDS project consortium. This involved leadership of the consortium of eleven institutions from around Europe. The project was funded from the 6th Framework Programme for Scientific Research of the EU (contract #033596). It has started in September 2006 and finished successfully in August 2009. More information can be found on the <a href="https://github.com/smialekm/redseeds/">project's web page</a>, and <a href="https://cordis.europa.eu/project/rcn/79442/factsheet/en">info page</a>.</p>
 
 <div style="clear:left;"></div>
 
 <p><strong>REMICS (REuse and Migration of legacy applications to Interoperable Cloud Services)</strong></p>
 
-<p><a href="https://cordis.europa.eu/project/rcn/95104/factsheet/en"><img class=" wp-image-76 alignright" src="/images/remics.gif" alt="" width="127" height="112" /></a>I was the leader of the WUT team that took part in the REMICS consortium consisting of twelve institutions from around Europe. The project was funded from the 7th Framework Programme for Scientific Research of the EU (contract #257793). Our involvement has started in October 2011 and finished successfully in September 2013. More information can be found on the <a href="https://cordis.europa.eu/project/rcn/95104/factsheet/en">info page</a>.</p>
+<p><a href="https://cordis.europa.eu/project/rcn/95104/factsheet/en"><img class=" wp-image-76 alignright" src="/images/remics.gif" alt="" width="127" height="112" style="float:left; margin-right:20px;"/></a>I was the leader of the WUT team that took part in the REMICS consortium consisting of twelve institutions from around Europe. The project was funded from the 7th Framework Programme for Scientific Research of the EU (contract #257793). Our involvement has started in October 2011 and finished successfully in September 2013. More information can be found on the <a href="https://cordis.europa.eu/project/rcn/95104/factsheet/en">info page</a>.</p>
 
 <div style="clear:left;"></div>
 
 <p><strong>ICONS (Intelligent Content Management System)</strong></p>
 
-<p><a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en"><img class="wp-image-108 alignright" src="/images/icons.png" alt="" width="82" height="99" /></a>I was responsible for the development of methodology within the Infovide team. The project was funded from the 5th Framework Programme for Scientific Reserch of the EU (contract IST-2001-32429 ). The project consortium consisted of seven institutions and took place from January 2002 to April 2004. More information can be found of the <a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en">info page</a>.</p>
+<p><a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en"><img class="wp-image-108 alignright" src="/images/icons.png" alt="" width="82" height="99" style="float:left; margin-right:20px;"/></a>I was responsible for the development of methodology within the Infovide team. The project was funded from the 5th Framework Programme for Scientific Reserch of the EU (contract IST-2001-32429 ). The project consortium consisted of seven institutions and took place from January 2002 to April 2004. More information can be found of the <a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en">info page</a>.</p>
 
 </body>
 </html>
