--- a/research.html
+++ b/research.html
@@ -9,6 +9,20 @@
 
 <body>
 
+<img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px">
+<h1>Michał Śmiałek</h1>
+    <small>Professional and personal pages</small>
+    
+<div style="clear:left;"></div>
+
+<ul>
+  <li><a href="research.html">Research</a></li>
+  <li><a href="publications.html">Publications</a></li>
+  <li><a href="teaching.html">Teaching</a></li>
+  <li><a href="personal.html">Personal</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
+
 <h1>Research</h1>
     
 <h2>Research Group</h2>
