--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <li><a href="teaching.html">Teaching</a></li>
   <li><a href="personal.html">Personal</a></li>
   <li><a href="contact.html">Contact</a></li>
-</ul> 
+</ul>
+    
+<div class="wrap">
 
 <p><a href="https://orcid.org/0000-0001-6170-443X"><em>ORCID</em> <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon" width="16" height="16" border="0"></a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=8691503900">Scopus</a>, <a href="https://www.webofscience.com/wos/author/record/J-4240-2018"><em>Web of Science</em></a>, <em><a href="https://scholar.google.pl/citations?user=ZB-n2YQAAAAJ">Google Scholar</a></em><br> <em><a href="https://repo.pw.edu.pl/info/author/WUT58553/Person%2Bprofile%2B%25E2%2580%2593%2BMicha%25C5%2582%2B%25C5%259Amia%25C5%2582ek%2B%25E2%2580%2593%2BWarsaw%2BUniversity%2Bof%2BTechnology?r=author&tab=&lang=en">My official info page on the university research portal.</a></em></p>
 
@@ -31,5 +33,8 @@
 
 <p>I am also the author of “Understanding UML. Methods of object modeling” published by Helion (in Polish) and “From Requirements to Java in a Snap” published by Springer. I was the scientific coordinator of the <a href="https://github.com/smialekm/redseeds">ReDSeeDS
 </a> (<a href="https://cordis.europa.eu/project/rcn/79442/factsheet/en">fact sheet</a>) project financed from the 6th Framework Program for Scientific Research of the European Union and the <a href="https://www.balticlsc.eu/">BalticLSC</a> (<a href="https://projects.interreg-baltic.eu/projects/balticlsc-172.html">fact sheet</a>) project financed from the Interreg Baltic Sea Reagion programme.</p>
+
+</div>
+
 </body>
 </html>
