--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
 
+<div class="wrap">
 <img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px">
 <h1>Michał Śmiałek</h1>
-    <small>Professional and personal pages</small>
+<small>Professional and personal pages</small>
+</div>
     
 <div style="clear:left;"></div>
 
