--- a/research.html
+++ b/research.html
@@ -9,9 +9,11 @@
 
 <body>
 
+<div class="wrap">
 <img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px">
 <h1>Michał Śmiałek</h1>
-    <small>Professional and personal pages</small>
+<small>Professional and personal pages</small>
+</div>
     
 <div style="clear:left;"></div>
 
@@ -22,6 +24,8 @@
   <li><a href="personal.html">Personal</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
+
+<div class="wrap">
 
 <h1>Research</h1>
     
@@ -54,6 +58,8 @@
 <p><strong>ICONS (Intelligent Content Management System)</strong></p>
 
 <p><a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en"><img class="wp-image-108 alignright" src="/images/icons.png" alt="" width="82" height="99" style="float:left; margin-right:20px;"/></a>I was responsible for the development of methodology within the Infovide team. The project was funded from the 5th Framework Programme for Scientific Reserch of the EU (contract IST-2001-32429 ). The project consortium consisted of seven institutions and took place from January 2002 to April 2004. More information can be found of the <a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en">info page</a>.</p>
+
+</div>
 
 </body>
 </html>
