--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="wrap">
-<img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px">
+<a href="index.html"><img src="/images/smialek.jpg" width=150 align="center" style="float:left; margin-right:20px; margin-bottom:10px"></a>
 <h1>Michał Śmiałek</h1>
 <small>Professional and personal pages</small>
 </div>
