--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
     
 <div style="clear:left;"></div>
 
-<ul>
+<ul class="menu">
   <li><a href="research.html">Research</a></li>
   <li><a href="publications.html">Publications</a></li>
   <li><a href="teaching.html">Teaching</a></li>
@@ -58,6 +58,22 @@
 <p><strong>ICONS (Intelligent Content Management System)</strong></p>
 
 <p><a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en"><img class="wp-image-108 alignright" src="/images/icons.png" alt="" width="82" height="99" style="float:left; margin-right:20px;"/></a>I was responsible for the development of methodology within the Infovide team. The project was funded from the 5th Framework Programme for Scientific Reserch of the EU (contract IST-2001-32429 ). The project consortium consisted of seven institutions and took place from January 2002 to April 2004. More information can be found of the <a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en">info page</a>.</p>
+
+<h3>Conference Organisation</h3>
+
+<p>Here is a list of conferences, workshops and symposia where I am/was a Programme/Organising Committee Chair</p>
+<ul>
+<li><a href="http://www.iceis.org/">22nd International Conference on Enterprise Information Systems (ICEIS 2020)</a> - Programme co-Chair</li>
+<li><a href="http://www.iceis.org/?y=2019">21st International Conference on Enterprise Information Systems (ICEIS 2019)</a> - Programme co-Chair</li>
+<li><a href="http://www.iceis.org/?y=2018">20th International Conference on Enterprise Information Systems (ICEIS 2018)</a> - Programme co-Chair</li>
+<li><a href="http://www.iceis.org/?y=2017">19th International Conference on Enterprise Information Systems (ICEIS 2017)</a> - Programme co-Chair</li>
+<li><a href="http://kkio.pti.org.pl/2016/en/home-en/">XVIII KKIO Software Engineering Conference (2016)</a> - Programme co-Chair</li>
+<li><a href="http://kkio.pti.org.pl/2019/history/">XVII KKIO Software Engineering Conference (2015)</a> - Programme co-Chair</li>
+<li><a href="https://www.irit.fr/models/educatorSymp.html">Educators Symposium at the 11th MODELS Conference (2008)</a> - General Chair</li>
+<li>2nd International Workshop Model Reuse Strategies at the ICSR Conference (2008) - General Chair</li>
+<li>1st International Workshop Model Reuse Strategies, Warsaw (2006) - General Chair</li>
+<li><a href="https://www.cs.colostate.edu/models05/workshops.html#w10">Use Cases in Model-Driven Software Engineering at the 8th MODELS Conference (2005)</a> - General Co-Chair</li>
+</ul>
 
 </div>
 
