--- a/research.html
+++ b/research.html
@@ -59,6 +59,8 @@
 
 <p><a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en"><img class="wp-image-108 alignright" src="/images/icons.png" alt="" width="82" height="99" style="float:left; margin-right:20px;"/></a>I was responsible for the development of methodology within the Infovide team. The project was funded from the 5th Framework Programme for Scientific Reserch of the EU (contract IST-2001-32429 ). The project consortium consisted of seven institutions and took place from January 2002 to April 2004. More information can be found of the <a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en">info page</a>.</p>
 
+<div style="clear:left;"></div>
+
 <h3>Conference Organisation</h3>
 
 <p>Here is a list of conferences, workshops and symposia where I am/was a Programme/Organising Committee Chair</p>
