--- a/research.html
+++ b/research.html
@@ -77,6 +77,42 @@
 <li><a href="https://www.cs.colostate.edu/models05/workshops.html#w10">Use Cases in Model-Driven Software Engineering at the 8th MODELS Conference (2005)</a> - General Co-Chair</li>
 </ul>
 
+<h3>Peer Review</h3>
+
+<p><strong>Conferences</strong></p>
+
+<p>Here is a list of conferences where I am/was a Programme Committee member:</p>
+<ul>
+<li><a href="http://voyager.ce.fit.ac.jp/conf/cisis/2020/">14th International Conference on Complex, Intelligent and Software Intensive Systems (2020)</a></li>
+<li><a href="http://kkio.pti.org.pl/2019/">XXI KKIO Software Engineering Conference (2019)</a></li>
+<li><a href="https://www.mii.lt/balticDBIS2018/">13th International Baltic Conference on Databases and Information Systems (2018)</a></li>
+<li><a href="http://kkio.pti.org.pl/2017/en/home-en/">XIX KKIO Software Engineering Conference 2017</a></li>
+<li><a href="http://ecmfa2016.itu.dk/">12th European Conference on Modelling Foundations and Applications (2016)</a></li>
+<li><a href="http://www.icsoft.org/?y=2016">11th International Conference on Software Engineering and Applications (2016)</a></li>
+<li><a href="http://www.enase.org/?y=2016">11th International Conference on Evaluation of Novel Approaches to Software Engineering (2016)</a></li>
+<li><a href="https://re14.lmsteiner.com/">22nd IEEE International Requirements Engineering Conference, Posters &amp; Demos track (2014)</a></li>
+<li><a href="http://softeng.polito.it/ICSR13/">13th International Conference on Software Reuse (2013)</a></li>
+<li><a href="http://www.re2013.inf.puc-rio.br/pages/main.php?id=page_home">21st IEEE International Requirements Engineering Conference, Posters &amp; Demos track (2013)</a></li>
+<li><a href="http://models2010.ifi.uio.no/">13th ACM/IEEE International Conference on Model Driven Engineering, Languages and Systems (2010)</a></li>
+<li><a href="http://www.cs.colostate.edu/models09/">12th ACM/IEEE International Conference on Model Driven Engineering, Languages and Systems (2010)</a></li>
+</ul>
+<p>And several other.</p>
+
+<p><strong>Journals</strong></p>
+
+<p>Here is a list of journals where I have reviewed papers:</p>
+<ul>
+<li>ACM Transactions on Software Engineering (ACM)</li>
+<li>Science of Computer Programming (Elsevier)</li>
+<li>Information Systems Frontiers (Springer)</li>
+<li>Software and Systems Modeling (Springer)</li>
+<li>Enterprise and Information Systems (Taylor&amp;Francis)</li>
+<li>Computer Science and Information Systems</li>
+<li>Bulletin of the Polish Academy of Sciences</li>
+<li>e-Informatica Software Engineering Journal</li>
+</ul>
+
+
 </div>
 
 </body>
