--- a/research.html
+++ b/research.html
@@ -65,12 +65,13 @@
 
 <p>Here is a list of conferences, workshops and symposia where I am/was a Programme/Organising Committee Chair</p>
 <ul>
-<li><a href="http://www.iceis.org/">22nd International Conference on Enterprise Information Systems (ICEIS 2020)</a> - Programme co-Chair</li>
-<li><a href="http://www.iceis.org/?y=2019">21st International Conference on Enterprise Information Systems (ICEIS 2019)</a> - Programme co-Chair</li>
-<li><a href="http://www.iceis.org/?y=2018">20th International Conference on Enterprise Information Systems (ICEIS 2018)</a> - Programme co-Chair</li>
-<li><a href="http://www.iceis.org/?y=2017">19th International Conference on Enterprise Information Systems (ICEIS 2017)</a> - Programme co-Chair</li>
-<li><a href="http://kkio.pti.org.pl/2016/en/home-en/">XVIII KKIO Software Engineering Conference (2016)</a> - Programme co-Chair</li>
-<li><a href="http://kkio.pti.org.pl/2019/history/">XVII KKIO Software Engineering Conference (2015)</a> - Programme co-Chair</li>
+<li><a href="https://kkio.pti.org.pl/">KKIO Software Engineering Conference Series</a> - Steering Committee Member</li>
+<li><a href="https://www.iceis.org/">22nd International Conference on Enterprise Information Systems (ICEIS 2020)</a> - Programme co-Chair</li>
+<li><a href="https://www.iceis.org/?y=2019">21st International Conference on Enterprise Information Systems (ICEIS 2019)</a> - Programme co-Chair</li>
+<li><a href="https://www.iceis.org/?y=2018">20th International Conference on Enterprise Information Systems (ICEIS 2018)</a> - Programme co-Chair</li>
+<li><a href="https://www.iceis.org/?y=2017">19th International Conference on Enterprise Information Systems (ICEIS 2017)</a> - Programme co-Chair</li>
+<li><a href="https://kkio.pti.org.pl/2016/index.html">XVIII KKIO Software Engineering Conference (2016)</a> - Programme co-Chair</li>
+<li><a href="https://kkio.pti.org.pl/2019/past-editions/index.html">XVII KKIO Software Engineering Conference (2015)</a> - Programme co-Chair</li>
 <li><a href="https://www.irit.fr/models/educatorSymp.html">Educators Symposium at the 11th MODELS Conference (2008)</a> - General Chair</li>
 <li>2nd International Workshop Model Reuse Strategies at the ICSR Conference (2008) - General Chair</li>
 <li>1st International Workshop Model Reuse Strategies, Warsaw (2006) - General Chair</li>
