--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     
 <div style="clear:left;"></div>
 
-<ul>
-  <li><a href="research.html">Research</a></li>
-  <li><a href="publications.html">Publications</a></li>
-  <li><a href="teaching.html">Teaching</a></li>
-  <li><a href="personal.html">Personal</a></li>
-  <li><a href="contact.html">Contact</a></li>
+<ul class="menu">
+  <li class="item"><a href="research.html" class="item">Research</a></li>
+  <li class="item"><a href="publications.html" class="item">Publications</a></li>
+  <li class="item"><a href="teaching.html" class="item">Teaching</a></li>
+  <li class="item"><a href="personal.html" class="item">Personal</a></li>
+  <li class="item"><a href="contact.html" class="item">Contact</a></li>
 </ul>
     
 <div class="wrap">
