--- a/publications.html
+++ b/publications.html
@@ -27,11 +27,15 @@
 
 <div class="wrap">
 
-<h2>Research</h2>
+<h2>Publications</h2>
     
-<h3>Research Group</h3>
+<h3>Research Publications</h3>
 
-<p><a href="http://smog.iem.pw.edu.pl/"><img class=" wp-image-90 alignright" src="/images/smog.jpg" alt="" width="165" height="59" style="float:left; margin-right:20px;"/></a>I am the leader of the <a href="http://smog.iem.pw.edu.pl/">Software Modeling Group (SMoG)</a> affiliated with the <a href="http://www.iem.pw.edu.pl/?page_id=204">Institute of Theory of Electrical Engineering, Measurement and Information Systems</a> at the <a href="https://www.ee.pw.edu.pl/en/">Faculty of Electrical Engineering</a> of the <a href="https://www.pw.edu.pl/engpw">Warsaw University of Technology</a>. The main area of interest of the SMoG group is modeling of software. The group is mostly engaged in research around object-oriented software development methods and their applications. SMoG's area of concern are also CASE tools that try to realize the ideas of MDD (Model-Driven Development) and which enhance the possibility of using UML (Unified Modeling Language) as a universal "lingua franca" of software engineering. SMoG research activities are often related to the field of meta-modeling, such as issues which pertain creation of MOF-based definitions of languages. Other SMoG's research interests include scenario-based requirements engineering, model transformations and software reuse.</p>
+<p>An official list of my publications can be found on the Base of Knowledge portal of WUT to be found here: <a href="https://repo.pw.edu.pl/info/author/WUT58553/Micha%25C5%2582%2B%25C5%259Amia%25C5%2582ek?affil=&amp;tab=main&amp;conversationPropagation=join&amp;sort=&amp;lang=en&amp;cid=15071">Repo PW (Michał Śmiałek)</a>.</p>
+
+<p>You can also find my publications, including full texts for many of them, on the ResearchGate portal here: <a href="https://www.researchgate.net/profile/Michat_miatek">Michał Śmiałek's ResearchGate profile</a></p>
+
+<p>Other sources of information on my publications are: <a href="https://www.scopus.com/authid/detail.uri?authorId=8691503900">Scopus</a>, <a href="https://orcid.org/0000-0001-6170-443X">ORCID</a>, <a href="https://www.webofscience.com/wos/author/record/J-4240-2018">Web of Science</a>, <a href="https://scholar.google.pl/citations?user=ZB-n2YQAAAAJ">Google Scholar</a></p>
 
 <div style="clear:left;"></div>
 
