--- a/publications.html
+++ b/publications.html
@@ -39,11 +39,13 @@
 
 <div style="clear:left;"></div>
 
-<h3>Research Projects</h3>
+<h3>Books</h3>
 
-<p><strong>BalticLSC (Baltic Large Scale Computing)</strong></p>
+<p><strong><a href="https://www.springer.com/gp/book/9783319128375"> From Requirements to Java in a Snap - Springer 2015 </a></strong></p>
 
-<p><a href="https://www.balticlsc.eu/"><img class="wp-image-65 alignright" src="/images/balticlsc.jpg" alt="" width="152" height="64" style="float:left; margin-right:20px;"/></a>I was the Project Coordinator for the BalticLSC project consortium. WUT (Politechnika Warszawska) was the Lead Partner of the consortium of eight institutions from around the Baltic Sea Region. The project was funded from the Interreg BSR scheme of the European Union (project #075). It has started in September 2018 and have succesfully finished in December 2021. More information can be found on the <a href="https://www.balticlsc.eu/">project's web page</a>, and <a href="https://projects.interreg-baltic.eu/projects/balticlsc-172.html">info page</a>.</p>
+<p><a href="https://www.springer.com/gp/book/9783319128375"><img class="size-full wp-image-94 alignright" src="/images/springer.jpg" alt="" width="153" height="230" style="float:left; margin-right:20px;"  /></a>This book provides a coherent methodology for Model-Driven Requirements Engineering which stresses the systematic treatment of requirements within the realm of modelling and model transformations. The underlying basic assumption is that detailed requirements models are used as first-class artefacts playing a direct role in constructing software. To this end, the book presents the Requirements Specification Language (RSL) that allows precision and formality, which eventually permits automation of the process of turning requirements into a working system by applying model transformations and code generation to RSL.</p>
+<p>The book is structured in eight chapters. The first two chapters present the main concepts and give an introduction to requirements modelling in RSL. The next two chapters concentrate on presenting RSL in a formal way, suitable for automated processing. Subsequently, chapters 5 and 6 concentrate on model transformations with the emphasis on those involving RSL and UML. Finally, chapters 7 and 8 provide a summary in the form of a systematic methodology with a comprehensive case study.</p>
+<p>Presenting technical details of requirements modelling and model transformations for requirements, this book is of interest to researchers, graduate students and advanced practitioners from industry. While researchers will benefit from the latest results and possible research directions in MDRE, students and practitioners can exploit the presented information and practical techniques in several areas, including requirements engineering, architectural design, software language construction and model transformation. Together with a tool suite available online, the book supplies the reader with what it promises: the means to get from requirements to code “in a snap”.</p>
 
 <div style="clear:left;"></div>
 
