--- a/publications.html
+++ b/publications.html
@@ -49,9 +49,9 @@
 
 <div style="clear:left;"></div>
 
-<p><strong>ReDSeeDS (Requirements Driven Software Development System)</strong></p>
+<p><strong><a href="https://helion.pl/ksiazki/zrouml.htm"> Zrozumieć UML 2.0. (Understanding UML 2.0) - Helion 2005</a></strong></p>
 
-<p><a href="https://github.com/smialekm/redseeds/"><img class="size-full wp-image-73 alignright" src="/images/redseeds.gif" alt="" width="148" height="107" style="float:left; margin-right:20px;"/></a>I was the Scientific Coordinator for the ReDSeeDS project consortium. This involved leadership of the consortium of eleven institutions from around Europe. The project was funded from the 6th Framework Programme for Scientific Research of the EU (contract #033596). It has started in September 2006 and finished successfully in August 2009. More information can be found on the <a href="https://github.com/smialekm/redseeds/">project's web page</a>, and <a href="https://cordis.europa.eu/project/rcn/79442/factsheet/en">info page</a>.</p>
+<p><a href="https://helion.pl/ksiazki/zrouml.htm"><img class="size-full wp-image-97 alignright" src="/images/zrouml.jpg" alt="" width="181" height="236" /></a>The book is written in Polish and it teaches software modelling with the UML 2.0 notation. It presents the fundamentals of object-oriented modelling and associated concepts. It presents ways to model the environment of a software system, its functional properties and structure. The book describes also the process of transitioning from the models to source code, and associated methodologies based on UML. It covers topics such as: rules of object-based modelling, formulating requirements using UML, software architectural design, system implementation based on design, software development methodologies.</p>
 
 <div style="clear:left;"></div>
 
