--- a/publications.html
+++ b/publications.html
@@ -51,74 +51,16 @@
 
 <p><strong><a href="https://helion.pl/ksiazki/zrouml.htm"> Zrozumieć UML 2.0. (Understanding UML 2.0) - Helion 2005</a></strong></p>
 
-<p><a href="https://helion.pl/ksiazki/zrouml.htm"><img class="size-full wp-image-97 alignright" src="/images/zrouml.jpg" alt="" width="181" height="236" /></a>The book is written in Polish and it teaches software modelling with the UML 2.0 notation. It presents the fundamentals of object-oriented modelling and associated concepts. It presents ways to model the environment of a software system, its functional properties and structure. The book describes also the process of transitioning from the models to source code, and associated methodologies based on UML. It covers topics such as: rules of object-based modelling, formulating requirements using UML, software architectural design, system implementation based on design, software development methodologies.</p>
+<p><a href="https://helion.pl/ksiazki/zrouml.htm"><img class="size-full wp-image-97 alignright" src="/images/zrouml.jpg" alt="" width="181" height="236" style="float:left; margin-right:20px;"/></a>The book is written in Polish and it teaches software modelling with the UML 2.0 notation. It presents the fundamentals of object-oriented modelling and associated concepts. It presents ways to model the environment of a software system, its functional properties and structure. The book describes also the process of transitioning from the models to source code, and associated methodologies based on UML. It covers topics such as: rules of object-based modelling, formulating requirements using UML, software architectural design, system implementation based on design, software development methodologies.</p>
 
 <div style="clear:left;"></div>
 
-<p><strong>REMICS (REuse and Migration of legacy applications to Interoperable Cloud Services)</strong></p>
+<p><strong><a href="http://bcpw.bg.pw.edu.pl/dlibra/docmetadata?id=2098&amp;from=&amp;dirids=1&amp;ver_id=&amp;lp=1&amp;QI=">Software Development with Reusable Requirements-Based Cases - WUT Press, 2007</a></strong></p>
 
-<p><a href="https://cordis.europa.eu/project/rcn/95104/factsheet/en"><img class=" wp-image-76 alignright" src="/images/remics.gif" alt="" width="127" height="112" style="float:left; margin-right:20px;"/></a>I was the leader of the WUT team that took part in the REMICS consortium consisting of twelve institutions from around Europe. The project was funded from the 7th Framework Programme for Scientific Research of the EU (contract #257793). Our involvement has started in October 2011 and finished successfully in September 2013. More information can be found on the <a href="https://cordis.europa.eu/project/rcn/95104/factsheet/en">info page</a>.</p>
-
-<div style="clear:left;"></div>
-
-<p><strong>ICONS (Intelligent Content Management System)</strong></p>
-
-<p><a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en"><img class="wp-image-108 alignright" src="/images/icons.png" alt="" width="82" height="99" style="float:left; margin-right:20px;"/></a>I was responsible for the development of methodology within the Infovide team. The project was funded from the 5th Framework Programme for Scientific Reserch of the EU (contract IST-2001-32429 ). The project consortium consisted of seven institutions and took place from January 2002 to April 2004. More information can be found of the <a href="https://cordis.europa.eu/project/rcn/60050/factsheet/en">info page</a>.</p>
+<p>Full text available: <a href="http://bcpw.bg.pw.edu.pl/dlibra/docmetadata?id=2098&amp;from=&amp;dirids=1&amp;ver_id=&amp;lp=1&amp;QI=">click here</a>.<a href="http://bcpw.bg.pw.edu.pl/dlibra/docmetadata?id=2098&amp;from=&amp;dirids=1&amp;ver_id=&amp;lp=1&amp;QI="><img class="size-full wp-image-103 alignright" src="/images/habilbook.png" alt="" width="188" height="269" style="float:left; margin-right:20px;"/></a></p>
+<p>The book contains a detailed discussion on the issues that lead to constructing a comprehensive requirements-based reuse framework. There are described mechanisms and tools that can support such a framework. A vision of how to organise a reuse process is presented, including details on how a software development organisation should follow this process. This includes using a specific precise language for specifying requirements and designing systems. The process and the language are defined both formally and practically. The book introduces concrete syntax for individual elements of Software Cases: requirements, architecture and detailed design. This syntax is used to formulate them in a systematic way. Techniques for transforming models to form a coherent path from requirements to code are given. Certain mechanisms for comparing and retrieving Software Cases are also specified. This includes a query language suitable for formulating queries that allow for matching requirements models thus allowing for reusing solutions to problems specified through requirements.</p>
 
 <div style="clear:left;"></div>
-
-<h3>Conference Organisation</h3>
-
-<p>Here is a list of conferences, workshops and symposia where I am/was a Programme/Organising Committee Chair</p>
-<ul>
-<li><a href="https://kkio.pti.org.pl/">KKIO Software Engineering Conference Series</a> - Steering Committee Member</li>
-<li><a href="https://www.iceis.org/">22nd International Conference on Enterprise Information Systems (ICEIS 2020)</a> - Programme co-Chair</li>
-<li><a href="https://www.iceis.org/?y=2019">21st International Conference on Enterprise Information Systems (ICEIS 2019)</a> - Programme co-Chair</li>
-<li><a href="https://www.iceis.org/?y=2018">20th International Conference on Enterprise Information Systems (ICEIS 2018)</a> - Programme co-Chair</li>
-<li><a href="https://www.iceis.org/?y=2017">19th International Conference on Enterprise Information Systems (ICEIS 2017)</a> - Programme co-Chair</li>
-<li><a href="https://kkio.pti.org.pl/2016/index.html">XVIII KKIO Software Engineering Conference (2016)</a> - Programme co-Chair</li>
-<li><a href="https://kkio.pti.org.pl/2019/past-editions/index.html">XVII KKIO Software Engineering Conference (2015)</a> - Programme co-Chair</li>
-<li><a href="https://www.irit.fr/models/educatorSymp.html">Educators Symposium at the 11th MODELS Conference (2008)</a> - General Chair</li>
-<li>2nd International Workshop Model Reuse Strategies at the ICSR Conference (2008) - General Chair</li>
-<li>1st International Workshop Model Reuse Strategies, Warsaw (2006) - General Chair</li>
-<li><a href="https://www.cs.colostate.edu/models05/workshops.html#w10">Use Cases in Model-Driven Software Engineering at the 8th MODELS Conference (2005)</a> - General Co-Chair</li>
-</ul>
-
-<h3>Peer Review</h3>
-
-<p><strong>Conferences</strong></p>
-
-<p>Here is a list of conferences where I am/was a Programme Committee member:</p>
-<ul>
-<li><a href="http://voyager.ce.fit.ac.jp/conf/cisis/2020/">14th International Conference on Complex, Intelligent and Software Intensive Systems (2020)</a></li>
-<li><a href="http://kkio.pti.org.pl/2019/">XXI KKIO Software Engineering Conference (2019)</a></li>
-<li><a href="https://www.mii.lt/balticDBIS2018/">13th International Baltic Conference on Databases and Information Systems (2018)</a></li>
-<li><a href="http://kkio.pti.org.pl/2017/en/home-en/">XIX KKIO Software Engineering Conference 2017</a></li>
-<li><a href="http://ecmfa2016.itu.dk/">12th European Conference on Modelling Foundations and Applications (2016)</a></li>
-<li><a href="http://www.icsoft.org/?y=2016">11th International Conference on Software Engineering and Applications (2016)</a></li>
-<li><a href="http://www.enase.org/?y=2016">11th International Conference on Evaluation of Novel Approaches to Software Engineering (2016)</a></li>
-<li><a href="https://re14.lmsteiner.com/">22nd IEEE International Requirements Engineering Conference, Posters &amp; Demos track (2014)</a></li>
-<li><a href="http://softeng.polito.it/ICSR13/">13th International Conference on Software Reuse (2013)</a></li>
-<li><a href="http://www.re2013.inf.puc-rio.br/pages/main.php?id=page_home">21st IEEE International Requirements Engineering Conference, Posters &amp; Demos track (2013)</a></li>
-<li><a href="http://models2010.ifi.uio.no/">13th ACM/IEEE International Conference on Model Driven Engineering, Languages and Systems (2010)</a></li>
-<li><a href="http://www.cs.colostate.edu/models09/">12th ACM/IEEE International Conference on Model Driven Engineering, Languages and Systems (2010)</a></li>
-</ul>
-<p>And several other.</p>
-
-<p><strong>Journals</strong></p>
-
-<p>Here is a list of journals where I have reviewed papers:</p>
-<ul>
-<li>ACM Transactions on Software Engineering (ACM)</li>
-<li>Science of Computer Programming (Elsevier)</li>
-<li>Information Systems Frontiers (Springer)</li>
-<li>Software and Systems Modeling (Springer)</li>
-<li>Enterprise and Information Systems (Taylor&amp;Francis)</li>
-<li>Computer Science and Information Systems</li>
-<li>Bulletin of the Polish Academy of Sciences</li>
-<li>e-Informatica Software Engineering Journal</li>
-</ul>
-
 
 </div>
 
