--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
     
 <h3>Research Publications</h3>
 
-<p>An official list of my publications can be found on the Base of Knowledge portal of WUT to be found here: <a href="https://repo.pw.edu.pl/info/author/WUT58553/Micha%25C5%2582%2B%25C5%259Amia%25C5%2582ek?affil=&amp;tab=main&amp;conversationPropagation=join&amp;sort=&amp;lang=en&amp;cid=15071">Repo PW (Michał Śmiałek)</a>.</p>
+<p>An official list of my publications can be found on the &quot;Base of Knowledge&quot; portal of WUT to be found here: <a href="https://repo.pw.edu.pl/info/author/WUT58553/Micha%25C5%2582%2B%25C5%259Amia%25C5%2582ek?affil=&amp;tab=main&amp;conversationPropagation=join&amp;sort=&amp;lang=en&amp;cid=15071">Repo PW (Michał Śmiałek)</a>.</p>
 
 <p>You can also find my publications, including full texts for many of them, on the ResearchGate portal here: <a href="https://www.researchgate.net/profile/Michat_miatek">Michał Śmiałek's ResearchGate profile</a></p>
 
