--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
 
 <h2>Teaching</h2>
     
-<p>THe list of courses where I am the course manager can be found on the <a href="https://isod.ee.pw.edu.pl/isod-portal/sylabusy?rp=%C5%9Amia%C5%82ek&oa=yes">faculty's teaching portal</a>.</p>
+<p>The list of courses where I am the course manager can be found on the <a href="https://isod.ee.pw.edu.pl/isod-portal/sylabusy?rp=%C5%9Amia%C5%82ek&oa=yes">faculty's teaching portal</a>.</p>
 <p>Courses I teach currently:</p>
 <ul>
 <li>Software Modelling in UML (undergraduate, Computer Science, 3rd semester)</li>
