--- a/personal.html
+++ b/personal.html
@@ -83,7 +83,7 @@
 
 <p><strong>Modelling</strong></p>
 
-<p>Besides practicing software modelling I sometimes practice model building. Here is an example of one of my models.<img class=" wp-image-123 alignright" src="/images/model2.jpg" alt="" width="231" height="189" style="float:left; margin-right:20px;"/></p>
+<p><img class=" wp-image-123 alignright" src="/images/model2.jpg" alt="" width="231" height="189" style="float:left; margin-right:20px;"/>Besides practicing software modelling I sometimes practice model building. Here is an example of one of my models.</p>
 
 <p><strong>Geocaching</strong></p>
     
