--- a/personal.html
+++ b/personal.html
@@ -81,9 +81,9 @@
 
 <h3>Personal Interests</h3>
 
-<p><strong>Modelling</strong></p>
+<p><strong><img class=" wp-image-123 alignright" src="/images/model2.jpg" alt="" width="231" height="189" style="float:left; margin-right:20px;"/>Modelling</strong></p>
 
-<p><img class=" wp-image-123 alignright" src="/images/model2.jpg" alt="" width="231" height="189" style="float:left; margin-right:20px;"/>Besides practicing software modelling I sometimes practice model building. Here is an example of one of my models.</p>
+<p>Besides practicing software modelling I sometimes practice model building. Here is an example of one of my models.</p>
 
 <p><strong>Geocaching</strong></p>
     
