--- a/research.html
+++ b/research.html
@@ -37,6 +37,12 @@
 
 <h3>Research Projects</h3>
 
+<p><strong>DoorCE (Data Opener Central Europe)</strong></p>
+
+<p><a href="https://www.interreg-central.eu/projects/doorce/"><img class="wp-image-65 alignright" src="/images/balticlsc.jpg" alt="" width="152" height="70" style="float:left; margin-right:20px; border: 1px solid dimgrey;"/></a>I am the Project Coordinator for the DoorCE project consortium. WUT (Politechnika Warszawska) is the Lead Partner of the consortium of ten institutions from around the Central Europe. The project is funded from the Interreg CE scheme of the European Union (project #075). It has started in June 2024 and is planned to be finished in November 2026. More information can be found on the <a href="https://www.interreg-central.eu/projects/doorce/">project's web page</a>, and <a href="https://www.linkedin.com/company/doorce/">LinkedIn page</a>.</p>
+
+<div style="clear:left;"></div>
+
 <p><strong>BalticLSC (Baltic Large Scale Computing)</strong></p>
 
 <p><a href="https://www.balticlsc.eu/"><img class="wp-image-65 alignright" src="/images/balticlsc.jpg" alt="" width="152" height="70" style="float:left; margin-right:20px; border: 1px solid dimgrey;"/></a>I was the Project Coordinator for the BalticLSC project consortium. WUT (Politechnika Warszawska) was the Lead Partner of the consortium of eight institutions from around the Baltic Sea Region. The project was funded from the Interreg BSR scheme of the European Union (project #075). It has started in September 2018 and have succesfully finished in December 2021. More information can be found on the <a href="https://www.balticlsc.eu/">project's web page</a>, and <a href="https://projects.interreg-baltic.eu/projects/balticlsc-172.html">info page</a>.</p>
