--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
 
 <p><strong>DoorCE (Data Opener Central Europe)</strong></p>
 
-<p><a href="https://www.interreg-central.eu/projects/doorce/"><img class="wp-image-65 alignright" src="/images/balticlsc.jpg" alt="" width="152" height="70" style="float:left; margin-right:20px; border: 1px solid dimgrey;"/></a>I am the Project Coordinator for the DoorCE project consortium. WUT (Politechnika Warszawska) is the Lead Partner of the consortium of ten institutions from around the Central Europe. The project is funded from the Interreg CE scheme of the European Union (project #075). It has started in June 2024 and is planned to be finished in November 2026. More information can be found on the <a href="https://www.interreg-central.eu/projects/doorce/">project's web page</a>, and <a href="https://www.linkedin.com/company/doorce/">LinkedIn page</a>.</p>
+<p><a href="https://www.interreg-central.eu/projects/doorce/"><img class="wp-image-65 alignright" src="/images/doorce.png" alt="" width="152" height="70" style="float:left; margin-right:20px; border: 1px solid dimgrey;"/></a>I am the Project Coordinator for the DoorCE project consortium. WUT (Politechnika Warszawska) is the Lead Partner of the consortium of ten institutions from around the Central Europe. The project is funded from the Interreg CE scheme of the European Union (project #075). It has started in June 2024 and is planned to be finished in November 2026. More information can be found on the <a href="https://www.interreg-central.eu/projects/doorce/">project's web page</a>, and <a href="https://www.linkedin.com/company/doorce/">LinkedIn page</a>.</p>
 
 <div style="clear:left;"></div>
 
